First Version of website 2

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
  <header>
 <h1 >GURJIT KAUR </h1>
-<img class= "image" src="gurjit.jpg">
+<img class= "image" src="https://github.com/kaurgurjit360/kg360/blob/master/gurjit.JPG?raw=true" alt= "Gurjit">
 
  <h2>
 About Me:
